<resources>

    <string name="app_name">AdvaceSettings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AdvaceSettings</string>
    <string name="hdmi_audio_title">HDMI Audio</string>
    <string name="hdmi_audio_summary">Enable or disable audio over HDMI</string>
    <!-- Application Settings : Switch storage mountpoints -->
    <string name="pref_switch_storage_title">Use internal storage</string>
    <string name="pref_switch_storage_summary_on">Using expanded internal storage for apps and media (requires reboot)</string>
    <string name="pref_switch_storage_summary_off">Using removable card for apps and media (requires reboot)</string>
    <string name="pref_storage_switch_unavailable">This device doesn\'t have expanded internal storage</string>
    <string name="pref_switch_cdma_signal_title">Switch Cdma Signal Display</string>
    <string name="pref_switch_cdma_signal_summary_on">Change to both 1x and 3g</string>
    <string name="pref_switch_cdma_signal_summary_off">Change to only one display</string>
    <string name="operator_display_title">Custom the Operator</string>
<<<<<<< HEAD
    <string name="operator_display_style">Custom the Operator Style</string>
=======
>>>>>>> f0aea56237ccb42e5e45058a2faa744d3ebd7e8c
    <string name="operator_display_dialog_title">Custom the Operator</string>
    <string name="operator_display_summary">Custom the Operator for your device</string>
    <string name="auto_power_on_off_title">Auto Power On Off</string>
    <string name="auto_power_on_off_summary">Disable or enable Pre-alarm power</string>
    <string name="status_bar_am_pm_style_title">Am/Pm Other Style</string>
    <string name="status_bar_am_pm_style_summary">Display other style of AM/PM next to clock</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_summary">Display style of AM/PM next to clock</string>
    <string name="system_status_title">System Status</string>
    <string name="system_status_summary">Display The System Status Info</string>
    <string name="system_status_categery">Statusbar</string>
    <string name="system_boot_categery">Auto Boot Options</string>
    <string name="system_info_categery">PhoneInfo</string>
    <string name="float_virtualkey">Virtual Key</string>
    <string name="float_categery">Virtual Key Settings</string>
    <string name="float_categery_memory">Virtual Key</string>
    <string name="float_categery_on">Virtual Key On</string>
    <string name="float_categery_off">Virtual Key Off</string>
    <string name="float_categery_on_onboot">Virtual Key On When Booted</string>
    <string name="float_categery_off_onboot">Virtual Key On When Booted</string>
    <string name="float_categery_onboot_memory">Virtual Key On Boot</string>
    <string name="pref_signal_summary_off">Graphic</string>
    <string name="pref_signal_summary_on">Text</string>
    <string name="pref_signal_title">Signal Type</string>

    <!-- Power Widget -->
    <string name="power_widget_title">Power widget</string>
    <string name="title_expanded_widget">Power widget</string>
    <string name="title_expanded_widget_brightness">Brightness widget</string>
    <string name="power_widget_behavior">Widget behavior</string>
    <string name="title_expanded_hide_onchange">Close drawer on change</string>
    <string name="title_expanded_hide_scrollbar">Hide scrollbar</string>
    <string name="title_widget_picker">Widget buttons</string>
    <string name="summary_widget_picker">View or change the displayed buttons</string>
    <string name="title_widget_order">Widget button order</string>
    <string name="summary_widget_order">View or change the order of the buttons</string>
    <string name="title_buttons">Buttons</string>
    <string name="title_toggle_wifi">Toggle Wi-Fi</string>
    <string name="title_toggle_bluetooth">Toggle Bluetooth</string>
    <string name="title_toggle_gps">Toggle GPS</string>
    <string name="title_toggle_sound">Toggle Sound</string>
    <string name="title_toggle_brightness">Toggle Brightness</string>
    <string name="title_toggle_sync">Toggle Sync</string>
    <string name="title_toggle_wifiap">Toggle Wi-Fi AP</string>
    <string name="title_toggle_screentimeout">Toggle Screen timeout</string>
    <string name="title_toggle_mobiledata">Toggle Mobile data</string>
    <string name="title_toggle_lockscreen">Toggle Lock screen</string>
    <string name="title_toggle_networkmode">Toggle 2G/3G</string>
    <string name="title_toggle_autorotate">Toggle Orientation</string>
    <string name="title_toggle_airplane">Toggle Airplane mode</string>
    <string name="title_toggle_flashlight">Toggle LED flashlight</string>
    <string name="title_toggle_sleep">Go to sleep</string>
    <string name="title_toggle_media_play_pause">Media: Toggle Play/Pause</string>
    <string name="title_toggle_media_previous">Media: Skip to Previous</string>
    <string name="title_toggle_media_next">Media: Skip to Next</string>
    <string name="title_toggle_lte">Toggle LTE</string>
    <string name="title_toggle_powersaving">Toggle PowerSaving</string>
    <string name="title_toggle_donotdisturb">Toggle DoNotDisturb</string>
    <string name="title_toggle_drivingmode">Toggle DrivingMode</string>
    <string name="title_toggle_wifidisplay">Toggle WifiDisplay</string>

    <!-- Notification Drawer -->
    <string name="notification_drawer_title">Notification drawer</string>
    <string name="screen_colors_title">Colors</string>
    <string name="category_mdnie_title">Screen</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe mode</string>
    <string name="mdnie_negative_title_head">Negative mode</string>
    <string name="mdnie_negative_summary_head">Invert display colors</string>
    <string name="mdnie_outdoor_title_head">Outdoor mode</string>
    <string name="mdnie_outdoor_summary_head">Adjust display for outdoor use</string>
    <string name="panel_gamma_title_head">Screen gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>
    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    <string name="category_generor_title">Generor</string>
    <string name="category_sensors_title">Sensors</string>
    <string name="gyro_subcat_title">Gyroscope</string>
    <string name="use_gyro_calibration_title_head">Use calibration data</string>
    <string name="use_gyro_calibration_summary_head">Use the gyroscope calibration values. Do a calibration after checking this!</string>
    <string name="calibrate_gyro_title_head">Calibrate</string>
    <string name="calibrate_gyro_summary_head">Put your phone on a flat surface, and press this to calibrate</string>
    <string name="touchkey_subcat_title">Touch key</string>
    <string name="touchkey_light_title_head">Enable keys backlight</string>
    <string name="touchkey_light_summary_head">Light up touch keys when screen is on</string>
    <string name="touchkey_bln_title_head">Enable keys notifications</string>
    <string name="touchkey_bln_summary_head">Light up touch keys when screen is off, and a notification is received</string>
    <string name="cabc_title_head">CABC</string>
    <string name="cabc_summary_head">Enable content adaptive backlight control</string>
    <!-- Application Settings : Switch storage mountpoints -->

    <string name="boot_audio_title">Enable Boot Audio</string>
    <string name="boot_audio_summary">Enable or disable audio when boot</string>
    <string name="boot_animation_title">Enable Boot Animation</string>
    <string name="boot_animation_summary">Enable or disable animation when boot</string>
    <string name="status_bar_show_clock_title">Show clock</string>
    <string name="status_bar_battery_status_percentage">Percentage</string>
    <string name="status_bar_battery_status_circle">Circle</string>
    <string name="status_bar_battery_status_circle_percentage">Circle with percentage</string>
    <string name="status_bar_battery_title">Battery status style</string>
    <string name="status_bar_style_icon">Icon</string>
    <string name="status_bar_style_hidden">Hidden</string>

    <!-- Wakeup options -->
    <string name="display_category_wakeup_options_title">Wakeup options</string>
    <string name="pref_volume_wake_title">Volume rocker wake</string>
    <string name="pref_volume_wake_summary">Pressing the volume rocker up/down will wake the device</string>
    <string name="display_category_backbutton_options_title">BackButton Options</string>
    <string name="pref_backbutton_kill_summary">backbutton longpress to kill app</string>
    <string name="pref_backbutton_kill_title">backbutton kill app</string>

    <!-- Hardware keys -->
    <string name="hardware_keys_title">Hardware keys</string>
    <string name="hardware_keys_bindings_title">Key actions</string>
    <string name="hardware_keys_enable_custom_title">Enable custom actions</string>
    <string name="hardware_keys_home_long_press_title">Home key (long press)</string>
    <string name="hardware_keys_menu_press_title">Menu key</string>
    <string name="hardware_keys_menu_long_press_title">Menu key (long press)</string>
    <string name="hardware_keys_assist_press_title">Search key</string>
    <string name="hardware_keys_assist_long_press_title">Search key (long press)</string>
    <string name="hardware_keys_app_switch_press_title">App switch key</string>
    <string name="hardware_keys_app_switch_long_press_title">App switch key (long press)</string>
    <string name="hardware_keys_show_overflow_title">Show action overflow</string>
    <string name="hardware_keys_show_overflow_summary">Display the 3-dot overflow menu button within apps</string>
    <string name="hardware_keys_show_overflow_toast_enable">The action overflow button may not be visible until apps are restarted</string>
    <string name="hardware_keys_show_overflow_toast_disable">The action overflow button may not be hidden until apps are restarted</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_custom_app">Choose a app</string>
    <string name="additional_options_title">Additional options</string>
    <string name="pick_up_app">Pickup App</string>
    <string name="custom_app_not_found">Custom app not found, Please select a new one</string>
    <string name="pref_home_answer_incall_title">Answer Incall</string>
    <string name="pref_home_answer_incall_summary">Home key to answer incall</string>
    <string name="title_button_modes">Button modes</string>
    <string name="pref_flash_mode_title">Flash mode</string>
    <string name="float_box_autohide">AutoHide</string>
    <string name="float_box_autohide_on">AutoHide On</string>
    <string name="float_box_autohide_off">AutoHide Off</string>
    <string name="pref_fautohide_peroid_title">AutoHide Peroid</string>
    <string name="pref_float_box_expand_style_title">Open Style</string>
    
    <string name="pref_float_box_size_title">Circle Size</string>

</resources>