<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/float_categery" >

    <PreferenceCategory android:title="@string/system_status_categery" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="status_bar_show_clock"
            android:title="@string/status_bar_show_clock_title" />

        <ListPreference
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/entries_status_bar_am_pm"
            android:entryValues="@array/values_status_bar_am_pm"
            android:key="status_bar_am_pm"
            android:summary="@string/status_bar_am_pm_summary"
            android:title="@string/status_bar_am_pm_title" />
        <ListPreference
            android:dialogTitle="@string/status_bar_am_pm_style_title"
            android:entries="@array/entries_status_bar_am_pm_style"
            android:entryValues="@array/values_status_bar_am_pm_style"
            android:key="status_bar_am_pm_style"
            android:summary="@string/status_bar_am_pm_style_summary"
            android:title="@string/status_bar_am_pm_style_title" />
        <ListPreference
            android:dialogTitle="@string/status_bar_battery_title"
            android:entries="@array/entries_status_bar_battery"
            android:entryValues="@array/values_status_bar_battery"
            android:key="status_bar_battery"
            android:title="@string/status_bar_battery_title" />

        <PreferenceScreen
<<<<<<< HEAD
            android:key="operator_display"
            android:title="@string/operator_display_title" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.android.settings.focus.CustomOperatorSetting"
                android:targetPackage="com.focus.advsettings" />
        </PreferenceScreen>
        <PreferenceScreen
=======
>>>>>>> f0aea56237ccb42e5e45058a2faa744d3ebd7e8c
            android:key="notification_drawer"
            android:title="@string/notification_drawer_title" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.android.settings.focus.PowerWidget"
                android:targetPackage="com.focus.advsettings" />
            <!--
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="signal_display"
            android:summaryOff="@string/pref_signal_summary_off"
            android:summaryOn="@string/pref_signal_summary_on"
            android:title="@string/pref_signal_title" />
            -->


            <!--
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cdma_signal_display"
            android:summaryOff="@string/pref_switch_cdma_signal_summary_off"
            android:summaryOn="@string/pref_switch_cdma_signal_summary_on"
            android:title="@string/pref_switch_cdma_signal_title" />
<<<<<<< HEAD
=======

        <EditTextPreference
            android:dialogTitle="@string/operator_display_dialog_title"
            android:key="operator_display"
            android:summary="@string/operator_display_summary"
            android:title="@string/operator_display_title" />
        </PreferenceScreen>
>>>>>>> f0aea56237ccb42e5e45058a2faa744d3ebd7e8c
            -->
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/float_categery" >
        <PreferenceScreen
            android:key="float_categery"
            android:title="@string/float_categery" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.android.settings.focus.VirtualKey"
                android:targetPackage="com.focus.advsettings" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/system_info_categery" >
        <PreferenceScreen
            android:key="system_status"
            android:summary="@string/system_status_summary"
            android:title="@string/system_status_title" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.android.settings.TestingSettings"
                android:targetPackage="com.android.settings" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>